plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.1' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
	group = 'com.orinan'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(17)
		}
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}

// 루트는 실행 가능한 Spring Boot 앱이 아님
tasks.matching { it.name == 'bootJar' || it.name == 'jar' }.configureEach {
	enabled = false
}
